--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "algoliasearch": "^4.22.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-instantsearch": "^7.7.0",
+    "react-instantsearch-dom": "^6.40.4",
     "react-toastify": "^10.0.4"
   },
   "engines": {
